--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@layer components {
+  .sidebar-icon {
+    @apply relative flex items-center justify-center h-10 w-10 m-2 mx-auto bg-primary text-zinc-100 rounded-3xl hover:bg-primary-focus hover:text-gray-700 
+    hover:rounded-xl hover:scale-110 transition-all duration-200 ease-linear cursor-pointer;
+  }
+
+  .sidebar-tooltip {
+    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-primary text-xs font-bold transition-all duration-100 scale-0 origin-left;
+  }
+}
