--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,8 +12,8 @@ body {
 
 @layer components {
   .sidebar-icon {
-    @apply relative flex items-center justify-center h-10 w-10 m-2 mx-auto bg-primary text-zinc-100 rounded-3xl hover:bg-primary-focus hover:text-gray-700 
-    hover:rounded-xl hover:scale-110 transition-all duration-200 ease-linear cursor-pointer;
+    @apply relative flex items-center justify-center h-11 w-11 m-2 mx-auto bg-primary text-white rounded-3xl hover:bg-primary-focus 
+    hover:rounded-xl hover:scale-110 hover:text-base-content transition-all duration-200 ease-linear cursor-pointer;
   }
 
   .sidebar-tooltip {
