--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,4 +19,8 @@ body {
   .sidebar-tooltip {
     @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-primary text-xs font-bold transition-all duration-100 scale-0 origin-left;
   }
+
+  .heading {
+    @apply text-2xl font-bold mb-5;
+  }
 }
