--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@ body {
   }
 
   .sidebar-tooltip {
-    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-primary text-xs font-bold transition-all duration-100 scale-0 origin-left;
+    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-primary text-xs font-bold transition-all duration-100 scale-0 origin-left z-10;
   }
 
   .heading {
