--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,29 +9,34 @@
 .chat-window .chat-header {
   height: 45px;
   border-radius: 6px;
-  background: #263238;
+  background: #f9d72f;
   position: relative;
   cursor: pointer;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 .chat-window .chat-header p {
   display: block;
   padding: 0 1em 0 2em;
-  color: #fff;
+  color: #263238;
   font-weight: 700;
   line-height: 45px;
 }
 
 .chat-window .chat-body {
   height: calc(800px - (45px + 70px));
-  border: 1px solid #263238;
-  background: #fff;
-
+  border: 1px solid #111827;
+  border-bottom: none;
+  background: #e5e7eb;
+  border-radius: 5px;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
   position: relative;
 }
 .chat-window .chat-body .message-container {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   overflow-x: hidden;
 }
 
@@ -48,7 +53,7 @@
   width: auto;
   height: auto;
   min-height: 40px;
-  max-width: 120px;
+  max-width: 400px;
   background-color: #43a047;
   border-radius: 5px;
   color: white;
@@ -60,6 +65,7 @@
   padding-left: 5px;
   overflow-wrap: break-word;
   word-break: break-word;
+  font-size: 18px;
 }
 
 #other {
@@ -72,7 +78,7 @@
 
 #other .message-meta {
   justify-content: flex-start;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #you {
@@ -86,7 +92,7 @@
 
 #you .message-meta {
   justify-content: flex-end;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .message-meta #author {
@@ -96,13 +102,13 @@
 
 .chat-window .chat-body .message .message-meta {
   display: flex;
-  font-size: 12px;
+  font-size: 18px;
 }
 
 .chat-window .chat-footer {
   height: 40px;
-  border: 1px solid #263238;
-  border-top: none;
+  border: 1px solid #111827;
+  /* border-top: none; */
   display: flex;
 }
 
@@ -125,10 +131,10 @@
   cursor: pointer;
   flex: 15%;
   height: 100%;
-  background: transparent;
+  background: #111827;
   outline: none;
   font-size: 25px;
-  color: lightgray;
+  color: #f9d72f;
 }
 
 .chat-window .chat-footer button:hover {
